--- a/index.html
+++ b/index.html
@@ -744,6 +744,28 @@
         </div>
         
         <div class="dashboard-section">
+            <h2><i class="fas fa-chart-pie"></i> Key Metrics</h2>
+            <div class="metrics-grid">
+                <div class="metric-card">
+                    <div class="metric-name"><i class="fas fa-search"></i> Avg. Indexed Travel Queries (2024)</div>
+                    <div class="metric-value">130.53 <span class="change positive"><i class="fas fa-arrow-up"></i> +26.44% YoY</span></div>
+                </div>
+                <div class="metric-card">
+                    <div class="metric-name"><i class="fas fa-ad"></i> Media Impressions (2025 Plan)</div>
+                    <div class="metric-value">15.24B <span class="change positive"><i class="fas fa-arrow-up"></i> +127.12% YoY</span></div>
+                </div>
+                <div class="metric-card">
+                    <div class="metric-name"><i class="fas fa-plane"></i> Flight Searches (2024)</div>
+                    <div class="metric-value">169.5K <span class="change positive"><i class="fas fa-arrow-up"></i> +54.79% YoY</span></div>
+                </div>
+                <div class="metric-card">
+                    <div class="metric-name"><i class="fas fa-hotel"></i> Hotel Guests (2024)</div>
+                    <div class="metric-value">357.7K <span class="change positive"><i class="fas fa-arrow-up"></i> +42.53% YoY</span></div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="dashboard-section">
             <h2><i class="fas fa-globe-americas"></i> Market Characteristics</h2>
             <div class="metrics-grid">
                 <div class="metric-card">
