--- a/index.html
+++ b/index.html
@@ -716,11 +716,11 @@
             <div class="metrics-grid">
                 <div class="metric-card">
                     <div class="metric-name"><i class="fas fa-search"></i> Avg. Monthly Indexed Travel Queries (2024)</div>
-                    <div class="metric-value">130.53 <span class="change positive"><i class="fas fa-arrow-up"></i> +26.44% YoY</span></div>
+                    <div class="metric-value">128.53 <span class="change positive"><i class="fas fa-arrow-up"></i> +26.44% YoY</span></div>
                 </div>
                 <div class="metric-card">
                     <div class="metric-name"><i class="fas fa-ad"></i> Media Impressions (2025 Plan)</div>
-                    <div class="metric-value">15.24B <span class="change positive"><i class="fas fa-arrow-up"></i> +127.12% YoY</span></div>
+                    <div class="metric-value">15.64B <span class="change positive"><i class="fas fa-arrow-up"></i> +150.24% YoY</span></div>
                 </div>
                 <div class="metric-card">
                     <div class="metric-name"><i class="fas fa-plane"></i> Flight Searches (2024)</div>
@@ -826,7 +826,7 @@
                         <div class="data-card">
                             <h4><i class="fas fa-trophy"></i> Peak Performance</h4>
                             <ul>
-                                <li><strong>Top Travel Query Months</strong>: September (180.19), October (149.04)</li>
+                                <li><strong>Top Travel Query Months</strong>: September (367.74), October (253.05)</li>
                                 <li><strong>Top Hotel Guest Months</strong>: December (43,813), November (43,636)</li>
                                 <li><strong>Top Flight Search Months</strong>: September (29,299), October (23,876)</li>
                             </ul>
@@ -908,7 +908,7 @@
                             <h4><i class="fas fa-calculator"></i> Statistical Insights</h4>
                             <ul>
                                 <li><strong>Media Elasticity</strong>: 0.68 (high impact)</li>
-                                <li><strong>Seasonality Index</strong>: 1.3 (moderate seasonal variation)</li>
+                                <li><strong>Seasonality Index</strong>: 2.0 (high seasonal variation)</li>
                                 <li><strong>YoY Growth Consistency</strong>: 0.81 (high consistency)</li>
                                 <li><strong>Forecast Confidence Interval</strong>: ±5.2%</li>
                             </ul>
