--- a/index.html
+++ b/index.html
@@ -718,8 +718,8 @@
             <h2><i class="fas fa-chart-line"></i> Brand Health Metrics (Q4 2024 vs Q4 2023)</h2>
             <div class="metrics-grid">
                 <div class="metric-card">
-                    <div class="metric-name"><i class="fas fa-eye"></i> Awareness</div>
-                    <div class="metric-value">94.50% <span class="change positive"><i class="fas fa-arrow-up"></i> +0.50pp vs Q4'23</span></div>
+                    <div class="metric-name"><i class="fas fa-plane"></i> Flight Searches (2024)</div>
+                    <div class="metric-value">3.39M <span class="change positive"><i class="fas fa-arrow-up"></i> +54.8% YoY</span></div>
                 </div>
                 <div class="metric-card">
                     <div class="metric-name"><i class="fas fa-search"></i> Consideration</div>
